[fix] features width on small screens

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -6,4 +6,5 @@
   --color-bg: rgba(26, 7, 57, 1);
   --color-orange: rgba(255, 193, 7, 1);
   --color-footer: rgba(75, 37, 137, 1); 
+  --color-text: #81AFDD;
 }
